--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,23 @@
 /data
 .data
 /beratools/gui/icons/grass
+/dist
+/output
+__pycache__
+notebooks/params_hpc.yml
+notebooks/params_win.yml
+notebooks/full_workflow.slurm
 *.pyc
 *.whl
-/dist
 .project
 .pydevproject
-BERATools.bat
-output
+
+local.env
 .env
+
 # pixi environments
 .pixi
 *.egg-info
 pixi.lock
-notebooks/params_hpc.yml
-notebooks/params_win.yml
-notebooks/full_workflow.slurm
-__pycache__
+
+
