--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - develop
+    # paths:
+    #   - 'beratools/**'  # file changes inside "beratools" will trigger the action 
   pull_request:
     branches:
       - develop
+    # paths:
+    #   - 'beratools/**'  # file changes inside "beratools" will trigger the action 
 
 jobs:
   test:
@@ -18,7 +22,7 @@ jobs:
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: '3.x'
+          python-version: '3.11'
           auto-update-conda: true
 
       - name: Create Conda Environment
