--- a/packaging/meta.yaml
+++ b/packaging/meta.yaml
@@ -6,8 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/RichardQZeng/BTools.git
-  git_tag: 0.2.1
+  git_url: https://github.com/appliedgrg/bera-tools.git
+  git_tag: 0.3.0
 
 build:
   entry_points:
