--- a/notebooks/params_config.yml
+++ b/notebooks/params_config.yml
@@ -43,7 +43,7 @@ args_footprint_fixed:
     out_footprint: ${DATA_DIR}/footprint_final.gpkg
     out_layer: footprint_fixed
     verbose: false
-    merge_group: true
+    merge_group: false
 
 args_split_lines:
     input_gpkg: ${DATA_DIR}/footprint_final.gpkg
@@ -52,7 +52,7 @@ args_split_lines:
 args_footprint_inter:
     in_line: ${DATA_DIR}/footprint_final.gpkg
     in_footprint: ${DATA_DIR}/footprint_rel.gpkg
-    in_layer: split_lines_selected
+    in_layer: split_lines
     in_layer_fp: footprint_rel
     n_samples: 15
     offset: 30
