--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -15,10 +15,11 @@ dependencies:
   - distributed
   - gdal=3.9.3
   - geopandas
+  - psutil
   - pyogrio>=0.9.0
   - pyqt
   - pytest
-  - psutil
+  - pyyaml
   - rioxarray
   - rpy2
   - r-essentials
